# forge-loop

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RENAME_PLAN.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json
.github/workflows/scripts/: create-github-release.sh  create-release-packages.ps1  create-release-packages.sh
docs/: installation.md  quickstart.md  upgrade.md
scripts/: orchestrate.sh
scripts/bash/: check-prerequisites.sh  orchestrate.sh
scripts/powershell/: check-prerequisites.ps1
src/forgeloop_cli/: __init__.py
src/specify_cli/: __init__.py
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
