[project]
name = "forgeloop-cli"
version = "0.1.0"
description = "ForgeLoop CLI – a tool to bootstrap projects for Spec-Driven Development (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
forgeloop = "forgeloop_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forgeloop_cli"]
